# ics-proxy

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  watch.sh
.cargo/: config.toml
.github/workflows/: build-push-tagged.yml  reusable-test-workflow.yml  test-build-push-tagged.yml  test-pr-push.yml
db/: create_db.sh  create_db.sql  prepare_test_db.sh
migrations/: 20240425185919_inital_db_scheme.sql  20240425193610_add_last_used_column.sql  20250826061247_add_created_at_column.sql  20250826212516_fill_last_used_date.sql
src/: main.rs  model.rs
templates/: base.html  edit.html  error.html  index.html  redirect.html
