[package]
name = "ics-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
uuid = { version = "0.8", features = ["v4"] }
url = "2.2"
reqwest = { version = "0.11", features = ["blocking"] }
tera = "1.15"
dotenv = "0.15"

sqlx = { version = "0.5", features = [ "sqlite", "runtime-actix-rustls" ] }
