[package]
name = "ics-proxy"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8"
uuid = { version = "1.10", features = ["v4"] }
url = "2.5"
reqwest = { version = "0.12", features = ["blocking"] }
tera = "1.20"
dotenv = "0.15"
sqlx = { version = "0.8", features = [
    "sqlite",
    "any",
    "tls-rustls",
    "runtime-tokio",
] }
chrono = "0.4.38"
tokio = "1.45.0"

[dev-dependencies]
html-escape = "0.2.13"
mockito = "1.7.0"
